[package]
name = "rust_rasterization"
version = "0.0.0"
authors = ["asurance <784672616@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
js-sys = "^0.3.40"
wee_alloc = { version = "^0.4.5", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.4"
features = [
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'ImageData',
    'HtmlImageElement',
    'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
